rename project name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "open-auth-dashboard",
+    "name": "open-service-dashboard",
     "version": "0.1.0",
     "private": true,
     "scripts": {
